--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "convex": "^1.16.0",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
+    "next-themes": "^0.3.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "2.16.0"
