--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.16.0",
     "convex-helpers": "^0.1.57",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.440.0",
     "next": "14.2.10",
     "next-themes": "^0.3.0",
