--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "2.16.0"
+    "usehooks-ts": "2.16.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
