--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.5.2",
-    "@liveblocks/client": "^2.7.2",
-    "@liveblocks/react": "^2.7.2",
+    "@liveblocks/client": "^1.11.0",
+    "@liveblocks/node": "^1.11.0",
+    "@liveblocks/react": "^1.11.0",
     "@next/font": "^14.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
